--- a/SteuerungEntfeuchter.csproj
+++ b/SteuerungEntfeuchter.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JusiJSONHelper" Version="1.0.6" />
+    <PackageReference Include="JusiBase" Version="1.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
