--- a/SteuerungEntfeuchter.csproj
+++ b/SteuerungEntfeuchter.csproj
@@ -7,9 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JusiBase" Version="1.0.10" />
+    <PackageReference Include="JusiBase" Version="1.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Quartz" Version="3.1.0" />
   </ItemGroup>
 
 
