--- a/SteuerungEntfeuchter.csproj
+++ b/SteuerungEntfeuchter.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="JusiBase" Version="1.0.28" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="NLog" Version="4.7.10" />
     <PackageReference Include="Quartz" Version="3.2.3" />
   </ItemGroup>
 
